responsive udpation done

--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,5 @@
-
-
-html, body {
+html,
+body {
     overflow-x: hidden !important;
     scroll-behavior: smooth;
 }
@@ -20,33 +19,34 @@ background-color: #19e9c6;
     border-radius: 5px;
 } */
 
-    #scrollbtn {
-
-        display: none;
-        position: fixed;
-        right: 5px;
-        bottom: 20px;
-        border: none;
-        border-radius: 50px;
-        z-index: 99;
-        cursor: pointer;
-        color: white;
-    }
+#scrollbtn {
+    display: none;
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
+    border: none;
+    border-radius: 100px;
+    z-index: 99;
+    cursor: pointer;
+    color: white;
+}
 
 #scrollbtn i {
     background-color: white;
-    color:#e69035;
+    color: #e69035;
     font-size: 30px;
 }
-#scrollbtn i:hover{
-    transform:scale(1.1);
+
+#scrollbtn i:hover {
+    transform: scale(1.1);
     background-color: none !important;
 }
+
 /* h1 Tag Gradient Color CSS Start */
 
 @keyframes effect {
     0% {
-        background: linear-gradient( to right, red, #000FFF);
+        background: linear-gradient(to right, red, #000FFF);
         -webkit-background-clip: text;
     }
 
@@ -55,145 +55,162 @@ background-color: #19e9c6;
         -webkit-background-clip: text;
     }
 }
+
 /* h1 Tag Gradient Color CSS End */
 
 
 i {
     color: white;
-    font-weight:bolder;
+    font-weight: bolder;
     border-radius: 40px;
     font-size: 20px;
     margin-left: 5px;
-    padding:9px;
-    margin-right:5px;
-    transition:all ease 0.5s;
+    padding: 9px;
+    margin-right: 5px;
+    transition: all ease 0.5s;
 }
-.fa-instagram{
+
+.fa-instagram {
     color: red;
     font-weight: bolder;
 
 }
-.fa-twitter{
-    color:rgb(8, 185, 23);
+
+.fa-twitter {
+    color: rgb(8, 185, 23);
 }
-.fa-facebook{
-    color:rgb(8, 126, 223);
+
+.fa-facebook {
+    color: rgb(8, 126, 223);
 }
-i:hover{
+
+i:hover {
     background-color: #ed3238;
-    transition:all ease 0.2s;
+    transition: all ease 0.2s;
     cursor: pointer;
-    color:white
+    color: white
 }
 
 
 .container-2 {
+    position: relative;
     display: flex;
-    margin-top:110px;
-    margin-left:0px;
-    width:100%;
-    background-color:white;
+    margin-top: 110px;
+    margin-left: 0px;
+    width: 100%;
+    background-color: none;
     object-fit: contain;
     justify-content: center;
-    
+
 }
 
-.container-2 .content{
+.container-2 .content {
+    display: flex;
     flex-wrap: wrap;
-    padding:50px;
-    width:50%;
+    padding: 50px;
+    width: 50%;
     object-fit: contain;
+    text-align: center;
+    justify-content: center;
     object-position: center;
 }
+
 .container-2 .content p {
-    padding:10px 10px;
-    font-size:15px;
-    font-weight:lighter;
+    padding: 10px 10px;
+    font-size: 15px;
+    font-weight: lighter;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 20px;
     text-align: justify;
 }
-.container-2 .content img{
-    margin-left:0px;
+
+.container-2 .content figure img {
+    margin-left: 0px;
+    margin-bottom: 10px;
     box-shadow: 0 4px 8px 0 #265e3d;
     max-width: 100%;
     width: 100%;
+
 }
 
-.container-2 .content .name{
-    margin-top:10px;
+.container-2 .content .name {
+    height: 80px;
+    position: relative;
+    margin-top: 10px;
     color: #265e3d;
     text-align: center;
 }
-.container-2 .content h2{
-    margin-left:10px;
+
+.container-2 .content h2 {
+    margin-left: 10px;
     color: #e69035;
 }
-.container-2 .content img:hover{
-box-shadow: 0 4px 8px 0 #e69035;
+
+.container-2 .content img:hover {
+    box-shadow: 0 4px 8px 0 #e69035;
 }
 
 
-.container-2 .heading{
-    position: absolute;
-    font-size: 20px;
+.container-2 .heading {
+    display: flex;
     justify-content: center;
-    align-items: center;
-    
+    text-align: center;
 
 }
+
 .container-2 .heading p {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #265e3d;
 }
+
 .container-2 .heading h1 {
     font-weight: bolder;
-    margin-top: 30px;
     color: transparent;
-    animation:effect 3s linear infinite;
-}
-
-.space{
-    margin-top: -120px !important;
+    animation: effect 3s linear infinite;
 }
 
 
-.text-container{
-    width:100%;
-    padding:20px;
-    margin-top:110px;
-    background:white;
- }
+
+.text-container {
+    width: 100%;
+    padding: 10px;
+    margin-top: 110px;
+    background: none;
+}
+
+.text-container h1 {
+    text-align: center;
+    font-weight: bolder;
+    padding: 0px;
+    color: transparent;
+    animation: effect 3s linear infinite;
+}
+
+.text-container h3 {
+    margin-top: 30px;
+    padding-left: 10px;
+    color: #265e3d;
+
+}
+
 .text-container p {
-    margin-left: 30px;
-    padding-top: 10px;
+    margin-left: 10px;
     flex-wrap: wrap;
     flex-direction: column;
     color: black;
-    margin-bottom: 30px;
     line-height: 25px;
     z-index: 5;
 }
- .text-container h3 {
-    padding-left:30px;
-    color:#265e3d;
 
- }
-.text-container h1{
-    text-align: center;
-    font-weight: bolder;
-    padding: 20px;
-    color: transparent;
-    animation:effect 3s linear infinite;
-}
 
-.show-big-container{
+
+.show-big-container {
     position: fixed;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.9);
-    top:0%;
-    left:0%;
+    top: 0%;
+    left: 0%;
     align-items: center;
     justify-content: center;
     content: '';
@@ -211,7 +228,7 @@ box-shadow: 0 4px 8px 0 #e69035;
     border: 3px solid salmon;
 }
 
-.show-big-container:hover .big-image{
+.show-big-container:hover .big-image {
     transform: scale(1.2);
     transition: all 2s ease-in;
 }
@@ -224,27 +241,27 @@ box-shadow: 0 4px 8px 0 #e69035;
 
 img {
     vertical-align: middle;
-  }
-  
-  /* Position the image container (needed to position the left and right arrows) */
-  .gallery-container {
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.gallery-container {
     position: relative;
-    margin-top:130px;
-  }
-  
-  /* Hide the images by default */
-  .mySlides {
+    margin-top: 130px;
+}
+
+/* Hide the images by default */
+.mySlides {
     display: none;
-  }
-  
-  /* Add a pointer when hovering over the thumbnail images */
-  .cursor {
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
     cursor: pointer;
-  }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 40%;
@@ -257,56 +274,56 @@ img {
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
-  }
+}
 
- 
-  /* Position the "next button" to the right */
-  .next {
+
+/* Position the "next button" to the right */
+.next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-  /* Container for image text */
-  .caption-container {
+}
+
+/* Container for image text */
+.caption-container {
     text-align: center;
     background-color: #222;
     padding: 2px 16px;
     color: white;
-  }
-  
-  .row:after {
+}
+
+.row:after {
     content: "";
     display: table;
     clear: both;
-  }
-  
-  /* Six columns side by side */
-  .column {
+}
+
+/* Six columns side by side */
+.column {
     float: left;
     width: 16.66%;
-  }
-  
-  /* Add a transparency effect for thumnbail images */
-  .demo {
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
     opacity: 0.6;
-  }
-  
-  .active,
-  .demo:hover {
+}
+
+.active,
+.demo:hover {
     opacity: 1;
-  }
+}
