--- a/css/common.css
+++ b/css/common.css
@@ -116,7 +116,7 @@ i:hover {
 }
 
 .container-2 .content p {
-    font-weight: normal;
+    font-weight: bold;
     padding: 10px 10px;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
