--- a/css/style.css
+++ b/css/style.css
@@ -1118,7 +1118,7 @@ footer .copyright a:hover {
 @media screen and (max-width:767px) {
 
     #scrollbtn{
-        right:20px;
+        right:10px !important;
         overflow-x: hidden;
     }
     #scrollbtn i {
