--- a/css/common.css
+++ b/css/common.css
@@ -120,10 +120,10 @@ i:hover {
 }
 
 .container-2 .content p {
-    font-weight: bold;
+    
     padding: 10px 10px;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     line-height: 20px;
     text-align: justify;
 }
@@ -163,7 +163,7 @@ i:hover {
 }
 
 .container-2 .heading p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     color: #265e3d;
 }
 
