--- a/css/style.css
+++ b/css/style.css
@@ -105,15 +105,15 @@ body {
 .form-container {
     display: none;
     position: fixed;
-    background-color: whitesmoke;
+    background-color: rgba(0, 0, 0, 0.8);
     width: 600px;
     padding: 15px;
     top: 0;
     left: 0;
     transform: translate(70%, 25%);
     border-radius: 10px;
-    color: #265e3d;
-    z-index: 5;
+    color: white;
+    z-index: 9999;
     flex-direction: column;
 }
 
@@ -141,6 +141,7 @@ body {
     align-items: center;
     flex-direction: column;
     width: 100%;
+    
 }
 
 .form-container .enqry-form h1 {
